fixed summary content overflow-y from scroll to auto

--- a/css/summary.css
+++ b/css/summary.css
@@ -257,7 +257,7 @@ display: flex !important;
     display: flex;
     justify-content: center;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .summary-main-section {
